Prevent layout breaking with Korean + Tahoma UI font

--- a/apps/madconf/css/appearance.css
+++ b/apps/madconf/css/appearance.css
@@ -73,6 +73,10 @@
     margin-right: 3px;
 }
 
+#saveAsBtn:lang(ko) {
+    max-width: 118px;
+}
+
 mad-select {
     width: 197px;
     margin-left: 4px;
